--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,21 @@
+.img {
 
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+
+
+}
 .mainContainer {
   display: flex;
   justify-content: center;
   width: 100%;
   margin-top: 64px;
+  height: 100%;
+  z-index:1;
 }
 
 .dataContainer {
@@ -11,32 +23,71 @@
   flex-direction: column;
   justify-content: center;
   max-width: 600px;
+  
 }
 
 .header {
   text-align: center;
-  font-size: 60px;
+  font-size: 25px;
   font-weight: 600;
-  color: aquamarine;
-  
+  color: blanchedalmond;
+  font-family: 'Cinzel', serif;
+
+  z-index: 1;
 }
 
 .bio {
   text-align: center;
-  color: aquamarine;
   margin-top: 16px;
+  padding: 10px;
+  color: white;
+font-family: 'Cinzel', serif;
+
+  font-size: 20px;
+  z-index: 1;
 }
 
 .waveButton {
   cursor: pointer;
-  margin-top: 16px;
+  margin: 10px;
   padding: 8px;
-  border: 1;
-  border-radius: 6px;
-  color: blue;
+  border: 0;
+  border-radius: 7px;
+  color: black;
+  background-color:white;
+  font-family: 'Cinzel', serif;
+  font-size: 15px;
+  font-weight:bold;
+  z-index: 1;
 
   
 }
+.waveButton:hover{
+  background-color: grey;
+  color: white;
 
+}
 
+#_message{
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  color: black;
+  z-index: 1;
+  margin: 8px;
+  
+}
+.return{
+  z-index: 1;
+}
 
+@media only screen and (min-width: 300px) {
+  .header{
+    margin-left: 2px;
+  }
+  .waveButton{
+    margin: 5px;
+  }
+  .bio{
+    font-size: 16px;
+  }
+  
+}
